# eletromagnetism-streamlit

./: .gitignore  arx.txt
Streamlit_eletromag/: DAT.py
Streamlit_eletromag/Pages/: Coil.py  Documentation.py
Streamlit_eletromag/electromagnetism/: __init__.py  system_calculations.py
Streamlit_eletromag/electromagnetism/mathematics/: __init__.py  constants.py  geometry.py
Streamlit_eletromag/electromagnetism/models/: __init__.py  coil.py  racetrack.py  solenoid.py
Streamlit_eletromag/eletromagnetism-lib-main/: cloud.ipynb  pyproject.toml  requirements.txt
